--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,56 @@
 version: "3.8"
 
 services:
-  db_filestore:
+  eegfaktura-db:
     image: postgres:15-alpine
-    hostname: db_filestore
+    hostname: eegfaktura-db
     environment:
       POSTGRES_USER: "postgres"
       POSTGRES_PASSWORD: "fM3fFYwNbeIfxsPH"
       POSTGRES_DATABASE: "postgres"
-      DB_USERNAME: "filestore"
+      DB_USERNAME: "eegfaktura"
       DB_PASSWORD: "nAjk85YwUOplsXaA"
-      DB_DATABASE: "filestore"
+      DB_DATABASE: "eegfaktura"
+      POSTGRES_INITDB_ARGS='--locale=de_DE:UTF8':
     volumes:
       - postgres_data:/var/lib/postgresql/data/
       - ./postgresql/init-filestore-db.sh:/docker-entrypoint-initdb.d/init-filestore-db.sh
     ports:
       - 5432:5432
+    healthcheck:
+      test: "PGPASSWORD=$${DB_PASSWORD} pg_isready -d $${DB_DATABASE} -U $${DB_USERNAME} && psql --d $${DB_DATABASE} -U $${DB_USERNAME} --list"
+      timeout: 10s
+      start_period: 15s
+      interval: 60s
+      retries: 20
 
-  vfeeg-filestore:
+  eegfaktura-filestore:
     build:
       dockerfile: Dockerfile
       context: .
     ports:
       - "5000:5000"
     volumes:
-      - ./vfeeg-filestore-data:/vfeeg-filestore-data
+      - ./eegfaktura-filestore-data:/eegfaktura-filestore-data
     environment:
       FLASK_DEBUG: "false"
       APP_LOG_LEVEL: "debug"
-      DB_HOSTNAME: "db_filestore"
-      DB_USERNAME: "filestore"
+      DB_HOSTNAME: "eegfaktura-db"
+      DB_USERNAME: "eegfaktura"
       DB_PASSWORD: "nAjk85YwUOplsXaA"
-      DB_DATABASE: "filestore"
+      DB_DATABASE: "eegfaktura"
       DB_PORT: 5432
       HTTP_PROTOCOL: "http"
       HTTP_HOSTNAME: "192.168.108.13"
       HTTP_PORT: 5000
       HTTP_FILE_DL_ENDPOINT: "filestore"
-      FILESTORE_LOCAL_BASE_DIR: "/vfeeg-filestore-data"
+      FILESTORE_LOCAL_BASE_DIR: "/eegfaktura-filestore-data"
       FILESTORE_CREATE_UNKNOWN_CATEGORY: true
       FILESTORE_CREATE_UNKNOWN_CONTAINER: true
       FILESTORE_CREATE_UNKNOWN_STORAGE: true
     depends_on:
-      - db_filestore
+      eegfaktura-db:
+        condition: service_healthy
 
 volumes:
     postgres_data:
